# DevOps-Spring-2025

./: .gitignore  .pre-commit-config.yaml  README.md  add_books.bash  compose.yml  init-vector.sql  instructions.md  sonar-project.properties
.github/workflows/: docker-publish.yml  docker-publish.yml.disabled  linting.yml  workflow.yml  yandex-cloud-actions.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/etc/: alembic.ini
backend/migrations/: env.py
backend/migrations/versions/: 5a75713f30fe_add_book.py  a982fa0a126f_add_timezone_to_created_at_and_updated_.py  b57839fe8a5a_init.py  e0ecef335c53_add_book_embedding.py
backend/src/backend/domain/: models.py
backend/src/backend/entrypoints/webserver/: run.py  server.py
backend/src/backend/entrypoints/webserver/controllers/: version.py
backend/src/booker/: run_webserver.py  server.py  settings.py
backend/src/booker/api/rest/controllers/: books.py  version.py
backend/src/booker/domain/: entities.py  models.py
backend/src/booker/entrypoints/: run_webserver.py
backend/src/booker/servers/webserver/: server.py
backend/src/booker/service/: book.py
backend/tests/: test_book_service.py  test_books_controller.py
bot/: Dockerfile  pyproject.toml
bot/src/bot/: bot.py
bot/tests/: test_bot.py
deploy/: README.md  cloud-init-example.txt  main.tf
deploy/ansible/: ansible.cfg  config.env  hosts_example.yml
deploy/ansible/playbooks/: deploy-booker-from-scratch.yml  run-deploy.yml  stop-deploy.yml
deploy/grafana_provisioning_vm/dashboards/: backend-litestar.json  backend.json  default.yaml  frontend-django.json  hpa.json  kube-state-metrics.json  node-exporter-dashboard.json
deploy/kafka/: kafka_server.properties
deploy/manifests/: backend-deployment.yaml  backend-hpa.yaml  backend-service-node-port.yaml  backend-service.yaml  bot-deployment.yaml  embedder-deployment.yaml  embedder-service.yaml  frontend-deployment.yaml  frontend-service-node-port.yaml  frontend-service.yaml  kafka-ui-service-node-port.yaml  kafka-ui-service.yaml  kafka-ui.yaml  migrator-jobs.yaml  pgvector-initdb.yaml  pgvector-service.yaml  pgvector-statefulset.yaml  pgvector-volumes.yaml  strimzi-kafka-operator.yaml  strimzi-kafka-service.yaml  strimzi-kafka-topics.yaml
deploy/playbooks/: config.env  deploy-metrics.yml  deploy-services.yml  open-ports.yml  test-connection.yml
deploy/prometheus_vm/: prometheus.service  prometheus.yml
deploy/scripts/: deploy.sh  install-docker.sh  install-kubernetes.sh  ports-close.sh  ports-open.sh  setup-grafana.sh  setup-kafka.sh  setup-prometheus.sh  setup-sonarqube.sh
deploy/templates/: kafka_server_template.properties  notification_bot_secret_template.yml  open_ports.j2  prometheus_template.yml
deploy/terraform/yandex-cloud/: deploy.sh  install-docker.sh  main.tf  monitoring_compose.yml  prometheus.yml
deploy/terraform/yandex-cloud-lab2/: deploy.sh  main.tf
deploy/terraform/yandex-cloud/grafana_provisioning_vm/: grafana.ini
deploy/terraform/yandex-cloud/grafana_provisioning_vm/dashboards/: cluster.json  frontend.json
deploy/terraform/yandex-cloud/grafana_provisioning_vm/datasources/: prometheus_src.yaml
deploy/terraform/yandex-cloud/yandex-tank/: load_on_get.yml
deploy/vagrant/: Vagrantfile
deploy/yandex-tank/: load_on_get.yml
embedder/: Dockerfile  pyproject.toml
embedder/src/embedder/: server.py
embedder/tests/: test_server.py
frontend/: Dockerfile  README.md  conftest.py  package.json  pyproject.toml  pytest.ini  requirements.txt  setup_tests.sh  streamlit_demo.py
frontend/app/: models.py  urls.py  views.py
frontend/app/static/app/css/: styles.css
frontend/app/static/app/js/: script.js
frontend/app/templates/: simple.html
frontend/app/tests/: test_views.py
frontend/base/: settings.py  urls.py
frontend/tests/: package-lock.json  package.json  script.test.js  setup.sh
terraform/: .terraformrc  cloud-init.txt  deploy.sh  hosts.ini  main.tf
terraform/playbooks/: deploy-infra.yml
terraform/playbooks/grafana_provisioning_vm/dashboards/: default.yaml
terraform/playbooks/grafana_provisioning_vm/datasources/: prometheus_src.yaml
terraform/playbooks/manifests/: backend-deployment.yaml  devops-ingress.yaml  frontend-deployment.yaml  frontend-service-node-port.yaml  frontend-service.yaml  pgvector-secret.yaml  pgvector-service.yaml  pgvector-statefulset.yaml
terraform/playbooks/templates/: prometheus.j2
