[project]
name = "embedder"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"

authors = [
    { name = "Krisanov Roman", email = "rkrisanoff@gmail.com" },
    { name = "Vyugina Anastasia", email = "vnastav@gmail.com" },
]

requires-python = "==3.12.*"
dependencies = [
    "click==8.1.*",
    "huggingface-hub[hf-xet]==0.30.*",
    "litestar==2.16.*",
    "prometheus-client==0.21.*",
    # "mlserver==1.7.0",
    # "mlserver-huggingface",
    "sentence-transformers==4.1.*",
    "torch==2.7.*",
    "torchvision==0.22.*",
    "uvicorn==0.34.*",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torchvision-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[project.scripts]
run_server = "embedder.server:run"
